<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etHabitName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/habit_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etHabitDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/habit_description"
        android:inputType="text"
        android:layout_marginTop="8dp"/>
    <EditText
        android:id="@+id/editTargetValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/traget_value"
        android:inputType="number" />

</LinearLayout>
