<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <!-- HomeFragment -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.habittrackerapplication.HomeFragment"
        android:label="@string/nav_home" />

    <!-- AddHabitFragment -->
    <fragment
        android:id="@+id/nav_add_habit"
        android:name="com.example.habittrackerapplication.AddHabitFragment"
        android:label="@string/nav_add_habit" >
        <action
            android:id="@+id/action_nav_add_habit_self"
            app:destination="@id/nav_add_habit" />
    </fragment>

    <!-- SettingsFragment -->
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.habittrackerapplication.SettingsFragment"
        android:label="@string/nav_settings" />

</navigation>
